# face_shape_research

./: .gitignore  dlib_downloader.py  main.py  pyproject.toml  requirements.txt
Research MD/: pipeline_awal.md
algorithm_research/: face_insight_research.ipynb
dataset_preprocessing_and_extract3d/: pipeline_dataset.py  pipeline_dataset_multiproc.py  pipeline_dlib_dataset.py  pipeline_dlib_dataset_multiproc.py  research_data_metrics_for_rule_based.ipynb
dataset_preprocessing_and_extract3d/archieve/: forehead_calculation.py
dataset_preprocessing_and_extract3d/face_parsing/: __init__.py  face_parsing.py  resnet.py
dataset_preprocessing_and_extract3d/forehead_dense/: __init__.py  forehead_dense.py
training_notebook/: approach2_mobilefacenet_pytorch.ipynb  approach2_mobilefacenet_training.ipynb
